# validata

./: README.md  pyproject.toml  setup.py
data/: sample_data.json
src/: WRITEUP.md  cli.py  engine.py  models.py  repair.py  rules.py
tests/: test_engine.py  test_repair.py  test_rules.py
